[tool.poetry]
name = "riberry_ldap"
version = "0.2.0"
description = "LDAP authentication for Riberry"
authors = ["Shady Rafehi <shadyrafehi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
riberry = "^0.9.0"
ldap3 = "^2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
